adding content and fleshing out headers

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3712,7 +3712,7 @@ body.is-preload #banner:after {
     color: #ffffff;
     padding: 10em 0 8em 0;
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-        url("../../images/banner.jpg");
+        url("../../images/examRoom3.jpg");
     background-attachment: fixed;
     background-position: center center;
     background-repeat: no-repeat;
