--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3452,7 +3452,7 @@ body {
     align-items: center;
     padding: 4em 0 2em 0;
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-        url("../../images/landingImg.jpg");
+        url("../../images/landingImgSmaller.png");
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
