some media query shtuff

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3449,6 +3449,12 @@ body {
         line-height: 30px;
         padding-top: 4px;
     }
+    #banner {
+        height: 600px !important;
+    }
+    #newResource {
+        font-size: 14px;
+    }
 }
 @media screen and (max-width: 420px) {
     #bannerAbove {
