--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3479,6 +3479,18 @@ body {
     }
 }
 
+.expandableContent {
+    padding: 0 18px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
+
+.active,
+.collapsible:hover {
+    background-color: #555;
+}
+
 /* Banner */
 
 #banner {
