--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3483,7 +3483,7 @@ body {
     padding: 0 18px;
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.2s ease-out;
+    transition: max-height 0.4s ease-in-out;
 }
 
 .collapsible {
