--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3490,6 +3490,13 @@ body {
     min-width: 4em;
 }
 
+.youtube {
+    width: 80%;
+    aspect-ratio: 2 / 1;
+    display: block;
+    margin: 0 auto;
+}
+
 /* Banner */
 
 #banner {
